Login and Register
Primera versión funcional de la creacion de usuarios e inicio de sesión.

--- a/BienestarBovino/app/src/main/res/values/strings.xml
+++ b/BienestarBovino/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BienestarBovino</string>
+
+    <string name="invalid_mail">Ingrese un email válido.</string>
+    <string name="invalid_password">Ingrese un contraseña con 6 dígitos o más.</string>
 </resources>
