--- a/BienestarBovino/app/src/main/res/values/strings.xml
+++ b/BienestarBovino/app/src/main/res/values/strings.xml
@@ -42,6 +42,12 @@
         <item>vaquita</item>
     </string-array>
 
+    <string-array name="VentaEstadisticas">
+        <item>Bovinos Vendidos</item>
+        <item>Precios</item>
+        <item>Raza</item>
+    </string-array>
+
     <string-array name="Tipo">
         <item>monta</item>
     </string-array>
