--- a/BienestarBovino/app/src/main/res/values/strings.xml
+++ b/BienestarBovino/app/src/main/res/values/strings.xml
@@ -43,9 +43,9 @@
     </string-array>
 
     <string-array name="VentaEstadisticas">
-        <item>Bovinos Vendidos</item>
-        <item>Precios</item>
-        <item>Raza</item>
+        <item>Cantidad Bovinos Vendidos</item>
+        <item>Informe Precios Bovinos</item>
+        <item>Informe Ventas bovino Raza</item>
     </string-array>
 
     <string-array name="Tipo">
