Pequeños cambios en producción

--- a/BienestarBovino/app/src/main/res/values/strings.xml
+++ b/BienestarBovino/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     </string-array>
 
     <string-array name="Dieta">
+        <item>Forrajes</item>
         <item>Normal</item>
     </string-array>
 </resources>
