Cambios en personal y tareas

--- a/BienestarBovino/app/src/main/res/values/strings.xml
+++ b/BienestarBovino/app/src/main/res/values/strings.xml
@@ -56,4 +56,9 @@
         <item>Forrajes</item>
         <item>Normal</item>
     </string-array>
+
+    <string-array name="tipoPersonal">
+        <item>Administrador</item>
+        <item>Colaborador</item>
+    </string-array>
 </resources>
